# nvidiaGPU-optimized-image-processing

./: CMakeLists.txt  README.md  image_process.cu  image_process.cuh  main.cpp  output.txt  parser.cpp  parser.h  run_GPU_app.sh
data/: premium_photo-1664474619075-644dd191935f?w=900  wget-log
